...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settingsName"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Name"
            android:inputType="text" />
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Age"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settingsAge"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Age"
            android:inputType="number" />
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Height"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settingsHeight"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Height"
            android:inputType="number" />
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Weight"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settingsWeight"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Weight"
            android:inputType="number" />
...
    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingStart="30px"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout4"
        app:layout_constraintVertical_weight="1">

        <TextView
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Goal Steps"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settingsStepsGoal"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Steps Goal"
            android:inputType="number" />
...
