...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/inputAge"
        android:layout_width="303dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/age_input"
        android:inputType="number"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAge" />

    <EditText
        android:id="@+id/inputHeight"
        android:layout_width="303dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/height_input"
        android:inputType="number"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputHeight" />

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="303dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/weight_input"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWeightLabel" />

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="nextButton2Click"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
...
